--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -53,7 +53,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0px 30px;
+  margin: auto;
 }
 
 #trait {
