--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -27,7 +27,7 @@
     font-weight: lighter;
   }
   #title{
-    color: black;
+    color: #424242;
     font-weight: lighter;
     display: flex;
     justify-content:center;
