--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -42,7 +42,7 @@
 }
 
 #title {
-  color: black;
+  color: #424242;
   font-weight: lighter;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -657,7 +657,7 @@ footer {
 }
 
 .separateur-m1 {
-  width: 25%;
+  width: 35%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -757,9 +757,6 @@ li {
     margin: auto;
   }
   .separateur-m1 {
-    width: 15%;
-  }
-  .separateur {
     width: 15%;
   }
   .carte-m1 {
