--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -37,7 +37,7 @@
    #trait {
     text-decoration:none;
     text-align: center;
-    color:black;
+    color:#424242;
 }
  #trait:after {
     content: '';
