--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -61,9 +61,8 @@ html {
     vertical-align: middle;
     height: 15px;
     align-self: center;
-    width: 15%;
-    margin: 20px auto;
-    padding: 0% 8%;
+    width: 30%;
+    margin: 0;
   }
   
   @supports (mix-blend-mode: lighten) {
