--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -39,7 +39,7 @@ html {
     margin:20px auto 40px auto;
     -webkit-text-size-adjust: auto;
   }
-  .title-m2-1{
+  .title-m2-1 > a:nth-child(1){
     color:#c77800;
   }
   .englobe-m2{
