--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -36,8 +36,8 @@
    #trait {
     text-decoration:none;
     text-align: center;
-    color:#424242;
-}
+    margin: auto;
+  }
  #trait:after {
     content: '';
     display: block;
@@ -53,6 +53,9 @@
 }
 .title-m2-1 > a:nth-child(1){
   color:#c77800;
+}
+.m1{
+  color:grey;
 }
 .block{
   justify-content: center;
