--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -44,6 +44,10 @@
   color: #4e342e;
 }
 
+.m-1 {
+  color: black;
+}
+
 .carte-m1 {
   font-family: 'Open Sans Condensed', sans-serif;
   position: relative;
