--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -28,7 +28,9 @@
          justify-content: center;
          color: #4e342e;
      }
-         
+      .m-1{
+          color:black;
+      }   
   
       .carte-m1{
           font-family: 'Open Sans Condensed', sans-serif;
