--- a/styles/partials/menu2.css
+++ b/styles/partials/menu2.css
@@ -61,6 +61,14 @@ html {
   color: #c77800;
 }
 
+.title-m2-2 > a:nth-child(1) {
+  color: #ba68c8;
+}
+
+.title-m2-3 > a:nth-child(1) {
+  color: #8559da;
+}
+
 .englobe-m2 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -119,10 +127,6 @@ html {
   }
 }
 
-section {
-  color: #9c6996;
-}
-
 .li-m2-1, .title-m2-1 {
   color: #c77800;
 }
@@ -154,10 +158,6 @@ section.light-m2 {
   margin-top: 70px;
   text-align: center;
   background: #fdf5fe;
-}
-
-.dessert {
-  color: #3f51b5;
 }
 
 .light-m2 {
