--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -42,6 +42,14 @@ html {
   .title-m2-1 > a:nth-child(1){
     color:#c77800;
   }
+  .title-m2-2 > a:nth-child(1) {
+    color: #ba68c8;
+   }
+   .title-m2-3 > a:nth-child(1) {
+    color: #8559da;
+   }
+   
+   
   .englobe-m2{
     display:flex;
     flex-direction: row;
@@ -88,10 +96,6 @@ html {
     }
   }
 
-section {
-  color: #9c6996;
-}
-
 .li-m2-1,.title-m2-1{
   color: #c77800;
 }
@@ -115,9 +119,6 @@ section.light-m2 {
   margin-top: 70px;
   text-align: center;
   background: #fdf5fe;
-}
-.dessert{
-  color:#3f51b5;
 }
 
 .light-m2 {
