--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -58,7 +58,7 @@
 #trait {
   text-decoration: none;
   text-align: center;
-  color: #424242;
+  margin: auto;
 }
 
 #trait:after {
@@ -79,6 +79,10 @@
 
 .title-m2-1 > a:nth-child(1) {
   color: #c77800;
+}
+
+.m1 {
+  color: grey;
 }
 
 .block {
@@ -632,6 +636,10 @@ footer {
   color: #4e342e;
 }
 
+.m-1 {
+  color: black;
+}
+
 .carte-m1 {
   font-family: 'Open Sans Condensed', sans-serif;
   position: relative;
@@ -840,6 +848,14 @@ html {
   color: #c77800;
 }
 
+.title-m2-2 > a:nth-child(1) {
+  color: #ba68c8;
+}
+
+.title-m2-3 > a:nth-child(1) {
+  color: #8559da;
+}
+
 .englobe-m2 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -898,10 +914,6 @@ html {
   }
 }
 
-section {
-  color: #9c6996;
-}
-
 .li-m2-1, .title-m2-1 {
   color: #c77800;
 }
@@ -933,10 +945,6 @@ section.light-m2 {
   margin-top: 70px;
   text-align: center;
   background: #fdf5fe;
-}
-
-.dessert {
-  color: #3f51b5;
 }
 
 .light-m2 {
