modif css .recherche

--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -184,12 +184,12 @@
   border-left-width: 0px;
   border-left-style: solid;
  }
- #recherche .iconloupe {
+ .recherche .iconloupe {
   background:url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
   width:90%;
   }
     
-  #recherche input {
+  .recherche input {
   width: 100%;
   outline:0;
   border:0;
@@ -199,7 +199,7 @@
   display:block;
   padding-left:30px;
   }
-  #recherche {
+  .recherche {
  background-color: white;
  bottom: 0;
  height: 30px;
