--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -514,12 +514,12 @@ footer {
   border-left-style: solid;
 }
 
-#recherche .iconloupe {
+.recherche .iconloupe {
   background: url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
   width: 90%;
 }
 
-#recherche input {
+.recherche input {
   width: 100%;
   outline: 0;
   border: 0;
@@ -530,7 +530,7 @@ footer {
   padding-left: 30px;
 }
 
-#recherche {
+.recherche {
   background-color: white;
   bottom: 0;
   height: 30px;
