--- a/styles/partials/maquette.css
+++ b/styles/partials/maquette.css
@@ -309,12 +309,12 @@
   border-left-style: solid;
 }
 
-#recherche .iconloupe {
+.recherche .iconloupe {
   background: url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
   width: 90%;
 }
 
-#recherche input {
+.recherche input {
   width: 100%;
   outline: 0;
   border: 0;
@@ -325,7 +325,7 @@
   padding-left: 30px;
 }
 
-#recherche {
+.recherche {
   background-color: white;
   bottom: 0;
   height: 30px;
