--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -33,12 +33,12 @@
     align-items:center;
     margin: auto;
   }
-   #trait {
+   .m-1 {
     text-decoration:none;
     text-align: center;
     margin: auto;
   }
- #trait:after {
+ .m-1:after {
     content: '';
     display: block;
     margin: auto;
@@ -47,7 +47,7 @@
     background: transparent;
     transition: width .5s ease, background-color .5s ease;
 }
- #trait:hover:after {
+ .m-1:hover:after {
     width: 90%;
     background: #444;
 }
