--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -30,7 +30,7 @@ html {
   font-family: sans-serif;
   margin:0;
 }
-  .title-m2-1, .title-m2-2, .title-m2-3{
+  .m-2, .m-3, .m-4{
     display:flex;
     justify-content:center;
     align-items:center;
@@ -39,13 +39,13 @@ html {
     margin:20px auto 40px auto;
     -webkit-text-size-adjust: auto;
   }
-  .title-m2-1 > a:nth-child(1){
+  .m-2 {
     color:#c77800;
   }
-  .title-m2-2 > a:nth-child(1) {
+  .m-3 {
     color: #ba68c8;
    }
-   .title-m2-3 > a:nth-child(1) {
+   .m-4 {
     color: #8559da;
    }
    
