--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -81,10 +81,6 @@
   color: #c77800;
 }
 
-.m1 {
-  color: grey;
-}
-
 .block {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -829,9 +825,7 @@ html {
 }
 
 .m-2, .m-3, .m-4 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  margin: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -840,8 +834,23 @@ html {
           align-items: center;
   text-align: center;
   font-size: 1.3em;
-  margin: 20px auto 40px auto;
   -webkit-text-size-adjust: auto;
+}
+
+.m-2:after {
+  content: '';
+  display: block;
+  margin: auto;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  -webkit-transition: width .5s ease, background-color .5s ease;
+  transition: width .5s ease, background-color .5s ease;
+}
+
+.m-2:hover:after {
+  width: 90%;
+  background: #444;
 }
 
 .m-2 {
@@ -864,6 +873,9 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-item-align: center;
       align-self: center;
   width: 100%;
@@ -887,8 +899,7 @@ html {
   height: 15px;
   -ms-flex-item-align: center;
       align-self: center;
-  width: 30%;
-  margin: 0;
+  margin: auto;
 }
 
 @supports (mix-blend-mode: lighten) {
