--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -61,8 +61,8 @@
 
 
   .ul-m4{
-    padding:0 40px;
-    margin: 60px 0px;
+    padding:0;
+    margin: 60px 0;
     list-style: none;
     font-size:1.3em;
 }
@@ -71,11 +71,6 @@
     padding-left:50px;
     padding-bottom: 8px;
   }
-  .prix{
-    padding-right: 80px;
-    float: right;
-  }
-
   #bas{
     background-color: #00796b;
     color:#ffd54f;
@@ -138,12 +133,24 @@ footer{
       }
       .ul-m4{
         font-size:1.3em;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+
+
       }
-      li{
-        padding: 5px 0;
+      li {
+        list-style: none;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        padding: 0;
       }
       .prix{
         margin: 0;
-        padding: 0;
+        padding:8px 0;
+        display: flex;
+        justify-content: center;
       }
     }
