--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -97,6 +97,7 @@ html {
     margin: 70px auto;
   }
   .li-m2-1{
+    padding: 0;
     font-size: 1.1em;
     padding-bottom: 10px;
   }
@@ -178,6 +179,7 @@ section.light-m2 {
     font-size: 2em;
     margin:0;
   }
+  
   ul{
     text-align: center;
     margin-top:10px;
