--- a/styles/partials/menu3.scss
+++ b/styles/partials/menu3.scss
@@ -35,6 +35,7 @@
   height: 10px;
   border-radius: 0px 0px 0px 10px;
   padding-top: 8px;
+  align-self: auto;
 
 }
 
@@ -51,6 +52,7 @@
   height: 10px;
   border-radius: 0px 0px 10px 0px;
   padding-top: 8px;
+  align-self: auto;
 }
 
 .btn3 {
@@ -66,6 +68,7 @@
   height: 10px;
   border-radius: 0px 0px 0px 10px;
   padding-top: 8px;
+  align-self: auto;
 }
 
 .btn4 {
@@ -82,6 +85,7 @@
   height: 10px;
   border-radius: 0px 0px 10px 0px;
   padding-top: 8px;
+  align-self: auto;
 }
 
 .btn5 {
@@ -97,9 +101,11 @@
   height: 10px;
   border-radius: 0px 0px 0px 10px;
   padding-top: 8px;
+  align-self: auto;
 }
 
 .btn6 {
+  align-self: auto;
   border: solid 4px #64b5f6;
   border-top: 0px;
   border-right: 0px;
@@ -207,6 +213,7 @@
     border-radius: 0px 0px 10px 10px;
     width:50%;
     margin-bottom: 30px;
+    margin: auto;
   }
   .gradient-m3{
     font-size: 2em;
