--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -68,8 +68,10 @@
 }
   li{
     vertical-align: middle;
-    padding-left:50px;
     padding-bottom: 8px;
+  }
+  .prix{
+    float: right;
   }
   #bas{
     background-color: #00796b;
