--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -35,7 +35,7 @@
       .carte-m1{
           font-family: 'Open Sans Condensed', sans-serif;
           position: relative;
-          width: 80%;
+          width: 90%;
           margin: auto;
           background-color: #ffebee;
           margin-bottom: 150px;
@@ -56,6 +56,7 @@
          display: flex;
          align-self: center;
          height: 70px;
+         margin: auto;
   
      }
      .bas-m1{
