--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -96,8 +96,11 @@
 
 li {
   vertical-align: middle;
-  padding-left: 50px;
   padding-bottom: 8px;
+}
+
+.prix {
+  float: right;
 }
 
 #bas {
@@ -660,7 +663,7 @@ footer {
 .carte-m1 {
   font-family: 'Open Sans Condensed', sans-serif;
   position: relative;
-  width: 80%;
+  width: 90%;
   margin: auto;
   background-color: #ffebee;
   margin-bottom: 150px;
@@ -692,6 +695,7 @@ footer {
   -ms-flex-item-align: center;
       align-self: center;
   height: 70px;
+  margin: auto;
 }
 
 .bas-m1 {
@@ -818,7 +822,7 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 80%;
+  width: 90%;
   height: auto;
   margin: auto;
   margin-bottom: 150px;
@@ -1076,7 +1080,7 @@ section.light-m2 {
 
 #container-m3 {
   font-family: 'Dancing Script', cursive;
-  width: 80%;
+  width: 90%;
   margin: 50px auto;
   background-color: #e5ffff;
   padding-bottom: 40px;
@@ -1362,7 +1366,7 @@ section.light-m2 {
 
 #container-m4 {
   font-family: 'Exo', sans-serif;
-  width: 80%;
+  width: 90%;
   height: auto;
   margin: auto;
   padding-bottom: 100px;
