--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -187,7 +187,7 @@ footer {
   }
   .ul-m4 {
     font-size: 1.3em;
-    padding: 0;
+    padding: 0 10px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
