--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -135,7 +135,7 @@ footer{
       }
       .ul-m4{
         font-size:1.3em;
-        padding: 0;
+        padding: 0 10px;
         display: flex;
         flex-direction: column;
 
