--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -134,6 +134,7 @@ footer{
         height:auto;
       }
       .ul-m4{
+        margin-top:0;
         font-size:1.3em;
         padding: 0 10px;
         display: flex;
