--- a/styles/partials/menu4.scss
+++ b/styles/partials/menu4.scss
@@ -83,6 +83,9 @@
     .block{
         flex-direction: column;
     }
+    .light-m4{
+        margin-bottom:30px;
+    }
   .prix {
       float: none;
      display: flex;
@@ -114,5 +117,5 @@
   section{
       margin:0;
   }
-  
+
    }
