--- a/styles/partials/menu4.scss
+++ b/styles/partials/menu4.scss
@@ -4,7 +4,8 @@
     width: 90%;
     height: auto;
     margin: auto;
-    padding-bottom: 100px;
+    margin-bottom: 100px;
+    padding-bottom: 30px;
 }
       .light-m4{
           font-size:2.4em;
