--- a/styles/partials/menu4.css
+++ b/styles/partials/menu4.css
@@ -3,7 +3,8 @@
   width: 90%;
   height: auto;
   margin: auto;
-  padding-bottom: 100px;
+  margin-bottom: 100px;
+  padding-bottom: 30px;
 }
 
 .light-m4 {
