--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -37,8 +37,9 @@
       -ms-flex-pack: center;
           justify-content: center;
   color: black;
-  margin-top: 40px;
+  margin: 40px auto;
   font-weight: lighter;
+  font-size: 1.2em;
 }
 
 #title {
@@ -59,6 +60,9 @@
   text-decoration: none;
   text-align: center;
   margin: auto;
+  color: black;
+  font-weight: lighter;
+  font-size: 1.8em;
 }
 
 .m-1:after {
@@ -88,10 +92,10 @@
 }
 
 .ul-m4 {
+  font-size: 1.5em;
   padding: 0;
-  margin: 60px 0;
+  margin: 60px;
   list-style: none;
-  font-size: 1.3em;
 }
 
 li {
