--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -23,8 +23,9 @@
     display:flex;
     justify-content: center;
     color: black;
-    margin-top:40px;
+    margin:40px auto;
     font-weight: lighter;
+    font-size: 1.2em;
   }
   #title{
     font-weight: lighter;
@@ -37,6 +38,9 @@
     text-decoration:none;
     text-align: center;
     margin: auto;
+    color:black;
+    font-weight: lighter;
+    font-size: 1.8em;
   }
  .m-1:after {
     content: '';
@@ -61,10 +65,10 @@
 
 
   .ul-m4{
+    font-size: 1.5em;
     padding:0;
-    margin: 60px 0;
+    margin: 60px;
     list-style: none;
-    font-size:1.3em;
 }
   li{
     vertical-align: middle;
