--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -16,7 +16,8 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: auto;
+  -ms-flex-item-align: center;
+      align-self: center;
   width: 90px;
   height: 90px;
 }
@@ -44,12 +45,8 @@
   color: #4e342e;
 }
 
-.m-1 {
-  color: black;
-}
-
 .carte-m1 {
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Neucha', cursive;
   position: relative;
   width: 90%;
   margin: auto;
@@ -57,6 +54,11 @@
   margin-bottom: 100px;
   padding-bottom: 30px;
   -webkit-margin-bottom-collapse: separate;
+}
+
+.titrem1 {
+  font-size: 3em;
+  font-weight: lighter;
 }
 
 .essaie {
@@ -76,7 +78,7 @@
 }
 
 .separateur-m1 {
-  width: 35%;
+  width: 33%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -100,6 +102,16 @@
 .entete {
   text-align: center;
   padding-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .titre-m1 {
