--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -6,7 +6,7 @@ html {
 }
 
 #container-m2 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Parisienne', cursive;
   position: relative;
   background-color: #fdf5fe;
   display: flex;
@@ -35,7 +35,8 @@ html {
     justify-content:center;
     align-items:center;
     text-align: center;
-    font-size: 1.3em;
+    font-size: 2.2em;
+    font-weight: lighter;
     -webkit-text-size-adjust: auto;
   }
   .m-2:after {
@@ -86,8 +87,13 @@ html {
    .m-4 {
     color: #8559da;
    }
-   
-   
+   .ul-m2{
+   font-size: 1.9em;
+   padding:0;
+   margin: 60px;
+   list-style: none;
+   }
+
   .englobe-m2{
     display:flex;
     flex-direction: row;
@@ -96,22 +102,21 @@ html {
     width:100%;
     margin: 70px auto;
   }
-  .li-m2-1{
-    padding: 0;
-    font-size: 1.1em;
-    padding-bottom: 10px;
-  }
   .liste-m2{
     padding-bottom:50px;
   }
   .icon-m2, .icon-m2-2{
     display: inline-flex;
     vertical-align: middle;
+    width: 33%;
     height: 15px;
     align-self: center;
     margin: auto;
   }
-  
+  .gradient-m2 {
+    font-size: 4em;
+    margin: 0 auto;
+  }
   @supports (mix-blend-mode: lighten) {
     section.light-m2 .gradient-m2 {
       display: inline-block;
@@ -152,6 +157,7 @@ html {
 
 li {
   font-weight: lighter;
+  padding: 10px 0;
 }
 
 section.light-m2 {
@@ -163,10 +169,6 @@ section.light-m2 {
 .light-m2 {
   background-color: #9c6996;
   margin-bottom: 30px;
-}
-
-.gradient-m2 {
-  font-size: 2.4em;
 }
 
 @media (max-width: 870px){
