--- a/styles/partials/menu3.css
+++ b/styles/partials/menu3.css
@@ -4,7 +4,7 @@
 }
 
 #container-m3 {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Kalam', cursive;
   width: 90%;
   margin: 50px auto;
   background-color: #e5ffff;
@@ -32,7 +32,7 @@
   -ms-flex-item-align: center;
       align-self: center;
   width: 33%;
-  margin: 0;
+  margin: 0 auto;
   height: 10px;
   border-radius: 0px 0px 0px 10px;
   padding-top: 8px;
@@ -54,7 +54,7 @@
       -ms-flex-pack: start;
           justify-content: start;
   width: 33%;
-  margin: 0;
+  margin: 0 auto;
   height: 10px;
   border-radius: 0px 0px 10px 0px;
   padding-top: 8px;
@@ -73,7 +73,7 @@
   -ms-flex-item-align: center;
       align-self: center;
   width: 33%;
-  margin: 0;
+  margin: 0 auto;
   float: left;
   height: 10px;
   border-radius: 0px 0px 0px 10px;
@@ -96,7 +96,7 @@
       -ms-flex-pack: start;
           justify-content: start;
   width: 33%;
-  margin: 0;
+  margin: 0 auto;
   float: right;
   height: 10px;
   border-radius: 0px 0px 10px 0px;
@@ -116,7 +116,7 @@
   -ms-flex-item-align: center;
       align-self: center;
   width: 35%;
-  margin: 0;
+  margin: 0 auto;
   float: left;
   height: 10px;
   border-radius: 0px 0px 0px 10px;
@@ -141,11 +141,12 @@
       -ms-flex-pack: start;
           justify-content: start;
   width: 35%;
-  margin: 0;
+  margin: 0 auto;
   float: right;
   height: 10px;
   border-radius: 0px 0px 10px 0px;
   padding-top: 8px;
+  align-self: auto;
 }
 
 .bloc section {
@@ -180,8 +181,8 @@
 }
 
 .gradient-m3 {
-  font-size: 2.4em;
-  padding-top: 40px;
+  font-size: 3.3em;
+  padding: 40px 0;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
