--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -35,12 +35,13 @@
     margin: auto;
   }
    .m-1 {
+    font-family: cursive;
     text-decoration:none;
     text-align: center;
     margin: auto;
-    color:black;
+    color:#263238;
     font-weight: lighter;
-    font-size: 1.8em;
+    font-size: 2.5em;
   }
  .m-1:after {
     content: '';
@@ -65,7 +66,7 @@
 
 
   .ul-m4{
-    font-size: 1.5em;
+    font-size: 1.7em;
     padding:0;
     margin: 60px;
     list-style: none;
@@ -76,6 +77,7 @@
   }
   .prix{
     float: right;
+    font-size: 0.8em;
   }
   #bas{
     background-color: #00796b;
@@ -139,13 +141,12 @@ footer{
       }
       .ul-m4{
         margin-top:0;
-        font-size:1.3em;
+        font-size:1.7em;
         padding: 0 10px;
         display: flex;
         flex-direction: column;
-
-
       }
+
       li {
         list-style: none;
         flex-direction: column;
