--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -35,7 +35,7 @@ html {
     justify-content:center;
     align-items:center;
     text-align: center;
-    font-size: 2.2em;
+    font-size: 2.5em;
     font-weight: lighter;
     -webkit-text-size-adjust: auto;
   }
@@ -113,29 +113,31 @@ html {
     align-self: center;
     margin: auto;
   }
-  .gradient-m2 {
-    font-size: 4em;
-    margin: 0 auto;
+  .light-m2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    width: 100%;
   }
   @supports (mix-blend-mode: lighten) {
-    section.light-m2 .gradient-m2 {
-      display: inline-block;
+    .gradient-m2 {
+      font-size: 4em;
+      justify-content: center;
       position: relative;
       color: #000;
       background: #fff;
       mix-blend-mode: multiply;
+      margin: 0;
     }
-    section.light-m2 .gradient-m2::before {
+    .gradient-m2::before {
       content: "";
-      display: block;
       position: absolute;
       top: 0;
       right: 0;
       bottom: 0;
       left: 0;
       background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#faaa54), color-stop(#ba68c8), color-stop(#ba68c8), to(#8559da));
-      background: linear-gradient(to right, #c77800, #faaa54, #ba68c8, #9c6996, #8559da);
-      pointer-events: none;
+        background: linear-gradient(to right, #c77800, #c77800, #faaa54, #ba68c8, #9c6996, #8559da);
       mix-blend-mode: screen;
     }
   }
@@ -160,16 +162,6 @@ li {
   padding: 10px 0;
 }
 
-section.light-m2 {
-  margin-top: 70px;
-  text-align: center;
-  background: #fdf5fe;
-}
-
-.light-m2 {
-  background-color: #9c6996;
-  margin-bottom: 30px;
-}
 
 @media (max-width: 870px){
   #container-m2{
@@ -178,13 +170,7 @@ section.light-m2 {
     margin-bottom: 100px;
   }
   .gradient-m2{
-    font-size: 2em;
     margin:0;
-  }
-  
-  ul{
-    text-align: center;
-    margin-top:10px;
   }
   .prix {
     float:none;
@@ -198,9 +184,6 @@ section.light-m2 {
     flex-direction: column;
     margin-bottom: 50px;;
   }
-  section.light-m2{
-    margin: auto;
-  }
   .icon-m2, .icon-m2-2{
     width: auto;
   }
@@ -209,6 +192,11 @@ section.light-m2 {
   }
   li{
     padding: 10px 0px;
+  }
+  .ul-m2{
+    font-size: 2em;
+    margin: auto;
+    padding: 5px;
   }
 
 }
