--- a/styles/partials/menu3.css
+++ b/styles/partials/menu3.css
@@ -33,11 +33,8 @@
       align-self: center;
   width: 33%;
   margin: 0 auto;
-  height: 10px;
   border-radius: 0px 0px 0px 10px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn2 {
@@ -55,11 +52,8 @@
           justify-content: start;
   width: 33%;
   margin: 0 auto;
-  height: 10px;
   border-radius: 0px 0px 10px 0px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn3 {
@@ -75,11 +69,8 @@
   width: 33%;
   margin: 0 auto;
   float: left;
-  height: 10px;
   border-radius: 0px 0px 0px 10px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn4 {
@@ -98,11 +89,8 @@
   width: 33%;
   margin: 0 auto;
   float: right;
-  height: 10px;
   border-radius: 0px 0px 10px 0px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn5 {
@@ -115,19 +103,14 @@
   display: inline-flex;
   -ms-flex-item-align: center;
       align-self: center;
-  width: 35%;
+  width: 33%;
   margin: 0 auto;
   float: left;
-  height: 10px;
   border-radius: 0px 0px 0px 10px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn6 {
-  -ms-flex-item-align: auto;
-      align-self: auto;
   border: solid 4px #64b5f6;
   border-top: 0px;
   border-right: 0px;
@@ -140,31 +123,32 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
-  width: 35%;
+  width: 33%;
   margin: 0 auto;
   float: right;
-  height: 10px;
   border-radius: 0px 0px 10px 0px;
-  padding-top: 8px;
-  align-self: auto;
+  align-self: center;
 }
 
-.bloc section {
+.bloc {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: row;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-          flex-direction: row;
+          flex-direction: column;
   word-break: normal;
-  width: 50%;
 }
 
 .entree, .plat, .dessert {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -181,7 +165,7 @@
 }
 
 .gradient-m3 {
-  font-size: 3.3em;
+  font-size: 4em;
   padding: 40px 0;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -194,16 +178,31 @@
   width: 100%;
 }
 
+.light-m3 {
+  padding: 40px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 30px;
+  width: 100%;
+}
+
 @supports (mix-blend-mode: lighten) {
-  section.light-m3 .gradient-m3 {
+  .gradient-m3 {
+    font-size: 4em;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
     color: #000;
     background: #fff;
     mix-blend-mode: multiply;
   }
-  section.light-m3 .gradient-m3::before {
+  .gradient-m3::before {
     content: "";
-    display: block;
     position: absolute;
     top: 0;
     right: 0;
@@ -211,7 +210,6 @@
     left: 0;
     background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
     background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
-    pointer-events: none;
     mix-blend-mode: screen;
   }
 }
