--- a/styles/partials/menu3.scss
+++ b/styles/partials/menu3.scss
@@ -31,10 +31,8 @@
   align-self: center;
   width: 33%;
   margin: 0 auto;
-  height: 10px;
   border-radius: 0px 0px 0px 10px;
-  padding-top: 8px;
-  align-self: auto;
+  align-self: center;
 
 }
 
@@ -48,10 +46,8 @@
   justify-content: start;
   width: 33%;
   margin: 0 auto;
-  height: 10px;
   border-radius: 0px 0px 10px 0px;
-  padding-top: 8px;
-  align-self: auto;
+  align-self: center;
 }
 
 .btn3 {
@@ -64,10 +60,8 @@
   width: 33%;
   margin: 0 auto;
   float: left;
-  height: 10px;
   border-radius: 0px 0px 0px 10px;
-  padding-top: 8px;
-  align-self: auto;
+  align-self: center;
 }
 
 .btn4 {
@@ -81,10 +75,8 @@
   width: 33%;
   margin: 0 auto;
   float: right;
-  height: 10px;
   border-radius: 0px 0px 10px 0px;
-  padding-top: 8px;
-  align-self: auto;
+  align-self: center;
 }
 
 .btn5 {
@@ -94,17 +86,14 @@
   border-left: 0px;
   display: inline-flex;
   align-self: center;
-  width: 35%;
+  width: 33%;
   margin: 0 auto;
   float: left;
-  height: 10px;
   border-radius: 0px 0px 0px 10px;
-  padding-top: 8px;
-  align-self: auto;
+  align-self: center;
 }
 
 .btn6 {
-  align-self: auto;
   border: solid 4px #64b5f6;
   border-top: 0px;
   border-right: 0px;
@@ -112,25 +101,25 @@
   display: inline-flex;
   align-self: center;
   justify-content: start;
-  width: 35%;
+  width: 33%;
   margin: 0 auto;
   float: right;
-  height: 10px;
   border-radius: 0px 0px 10px 0px;
-  padding-top: 8px;
-  align-self: auto;
+  align-self: center;
 }
 
-.bloc section {
+.bloc {
   display: flex;
   -ms-flex-direction: row;
-  flex-direction: row;
+  flex-direction: column;
   word-break: normal;
-  width: 50%;
+
 }
 
 .entree, .plat, .dessert {
-  display: flex;
+  display: inline-flex;
+  width: 100%;
+  align-items: center;
   flex-direction: row;
   justify-content: center;
   word-break: normal;
@@ -142,7 +131,7 @@
 }
 
 .gradient-m3 {
-  font-size: 3.3em;
+  font-size: 4em;
   padding: 40px 0;
   display: inline-flex;
   justify-content: center;
@@ -150,17 +139,24 @@
   margin-bottom: 30px;
   width: 100%;
 }
-
+.light-m3 {
+  padding: 40px 0;
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+  width: 100%;
+}
 @supports (mix-blend-mode: lighten) {
-  section.light-m3 .gradient-m3 {
+  .gradient-m3 {
+    font-size: 4em;
+    justify-content: center;
     position: relative;
     color: #000;
     background: #fff;
     mix-blend-mode: multiply;
   }
-  section.light-m3 .gradient-m3::before {
+  .gradient-m3::before {
     content: "";
-    display: block;
     position: absolute;
     top: 0;
     right: 0;
@@ -168,7 +164,6 @@
     left: 0;
     background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
     background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
-    pointer-events: none;
     mix-blend-mode: screen;
   }
 }
