--- a/styles/partials/menu4.scss
+++ b/styles/partials/menu4.scss
@@ -7,30 +7,30 @@
     margin-bottom: 100px;
     padding-bottom: 30px;
 }
-      .light-m4{
-          font-size:2.4em;
-          display:flex;
-          justify-content: center;
-      }
-@supports (mix-blend-mode: lighten) {
-    section.light-m4 .gradient-m4 {
-      display: inline-block;
+.light-m4 {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  @supports (mix-blend-mode: lighten) {
+    .gradient-m4 {
+      font-size: 4em;
+      justify-content: center;
       position: relative;
       color: #000;
       background: #fff;
       mix-blend-mode: multiply;
     }
-    section.light-m4 .gradient-m4::before {
+    .gradient-m4::before {
       content: "";
-      display: block;
       position: absolute;
       top: 0;
       right: 0;
       bottom: 0;
       left: 0;
-      background: -webkit-gradient(linear, left top, right top, from(#00701a), color-stop(#00701a), color-stop(#43a047), color-stop(#76d275), to(#76d275));
-      background: linear-gradient(to right, #00701a, #43a047, #43a047, #76d275, #76d275);
-      pointer-events: none;
+      background: -webkit-gradient(linear, left top, right top, from( #2e7d32), color-stop(#66bb6a), color-stop(#66bb6a), color-stop(#81c784), to(#76d275));
+            background: linear-gradient(to right, #2e7d32, #81c784, #98ee99, #98ee99);
       mix-blend-mode: screen;
     }
   }
@@ -98,7 +98,6 @@
  }
 
  li{
-     font-size: 1em;
      text-align:center;
  }
 
