--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -57,12 +57,13 @@
 }
 
 .m-1 {
+  font-family: cursive;
   text-decoration: none;
   text-align: center;
   margin: auto;
-  color: black;
+  color: #263238;
   font-weight: lighter;
-  font-size: 1.8em;
+  font-size: 2.5em;
 }
 
 .m-1:after {
@@ -92,7 +93,7 @@
 }
 
 .ul-m4 {
-  font-size: 1.5em;
+  font-size: 1.7em;
   padding: 0;
   margin: 60px;
   list-style: none;
@@ -105,6 +106,7 @@ li {
 
 .prix {
   float: right;
+  font-size: 0.8em;
 }
 
 #bas {
@@ -191,7 +193,7 @@ footer {
   }
   .ul-m4 {
     margin-top: 0;
-    font-size: 1.3em;
+    font-size: 1.7em;
     padding: 0 10px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -646,6 +648,8 @@ footer {
   width: 100%;
   width: 60px;
   height: 60px;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .fin {
@@ -657,6 +661,7 @@ footer {
       -ms-flex-pack: center;
           justify-content: center;
   color: #4e342e;
+  font-size: 1.8em;
 }
 
 .carte-m1 {
@@ -671,7 +676,9 @@ footer {
 }
 
 .titrem1 {
-  font-size: 3em;
+  font-size: 4em;
+  color: #4e342e;
+  margin: 30px 0px;
   font-weight: lighter;
 }
 
@@ -772,6 +779,9 @@ li {
     margin: auto;
     width: auto;
   }
+  .ul-m4 {
+    margin: 0;
+  }
   #container-m1 {
     width: 100%;
     font-family: fantasy;
@@ -811,6 +821,9 @@ li {
     height: auto;
     margin: 0;
     padding: 0;
+  }
+  .fin {
+    font-size: 1.8em;
   }
   .titre {
     margin: 10px auto;
@@ -869,7 +882,7 @@ html {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  font-size: 2.2em;
+  font-size: 2.5em;
   font-weight: lighter;
   -webkit-text-size-adjust: auto;
 }
@@ -974,30 +987,38 @@ html {
   margin: auto;
 }
 
-.gradient-m2 {
-  font-size: 4em;
-  margin: 0 auto;
+.light-m2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 30px;
+  width: 100%;
 }
 
 @supports (mix-blend-mode: lighten) {
-  section.light-m2 .gradient-m2 {
-    display: inline-block;
+  .gradient-m2 {
+    font-size: 4em;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
     color: #000;
     background: #fff;
     mix-blend-mode: multiply;
+    margin: 0;
   }
-  section.light-m2 .gradient-m2::before {
+  .gradient-m2::before {
     content: "";
-    display: block;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#faaa54), color-stop(#ba68c8), color-stop(#9c6996), to(#8559da));
-    background: linear-gradient(to right, #c77800, #faaa54, #ba68c8, #9c6996, #8559da);
-    pointer-events: none;
+    background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#c77800), color-stop(#faaa54), color-stop(#ba68c8), color-stop(#9c6996), to(#8559da));
+    background: linear-gradient(to right, #c77800, #c77800, #faaa54, #ba68c8, #9c6996, #8559da);
     mix-blend-mode: screen;
   }
 }
@@ -1030,17 +1051,6 @@ li {
   padding: 10px 0;
 }
 
-section.light-m2 {
-  margin-top: 70px;
-  text-align: center;
-  background: #fdf5fe;
-}
-
-.light-m2 {
-  background-color: #9c6996;
-  margin-bottom: 30px;
-}
-
 @media (max-width: 870px) {
   #container-m2 {
     width: 100%;
@@ -1048,12 +1058,7 @@ section.light-m2 {
     margin-bottom: 100px;
   }
   .gradient-m2 {
-    font-size: 2em;
     margin: 0;
-  }
-  ul {
-    text-align: center;
-    margin-top: 10px;
   }
   .prix {
     float: none;
@@ -1074,9 +1079,6 @@ section.light-m2 {
             flex-direction: column;
     margin-bottom: 50px;
   }
-  section.light-m2 {
-    margin: auto;
-  }
   .icon-m2, .icon-m2-2 {
     width: auto;
   }
@@ -1086,6 +1088,11 @@ section.light-m2 {
   }
   li {
     padding: 10px 0px;
+  }
+  .ul-m2 {
+    font-size: 2em;
+    margin: auto;
+    padding: 5px;
   }
 }
 
@@ -1124,11 +1131,8 @@ section.light-m2 {
       align-self: center;
   width: 33%;
   margin: 0 auto;
-  height: 10px;
   border-radius: 0px 0px 0px 10px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn2 {
@@ -1146,11 +1150,8 @@ section.light-m2 {
           justify-content: start;
   width: 33%;
   margin: 0 auto;
-  height: 10px;
   border-radius: 0px 0px 10px 0px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn3 {
@@ -1166,11 +1167,8 @@ section.light-m2 {
   width: 33%;
   margin: 0 auto;
   float: left;
-  height: 10px;
   border-radius: 0px 0px 0px 10px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn4 {
@@ -1189,11 +1187,8 @@ section.light-m2 {
   width: 33%;
   margin: 0 auto;
   float: right;
-  height: 10px;
   border-radius: 0px 0px 10px 0px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn5 {
@@ -1206,19 +1201,14 @@ section.light-m2 {
   display: inline-flex;
   -ms-flex-item-align: center;
       align-self: center;
-  width: 35%;
+  width: 33%;
   margin: 0 auto;
   float: left;
-  height: 10px;
   border-radius: 0px 0px 0px 10px;
-  padding-top: 8px;
-  -ms-flex-item-align: auto;
-      align-self: auto;
+  align-self: center;
 }
 
 .btn6 {
-  -ms-flex-item-align: auto;
-      align-self: auto;
   border: solid 4px #64b5f6;
   border-top: 0px;
   border-right: 0px;
@@ -1231,31 +1221,32 @@ section.light-m2 {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
-  width: 35%;
+  width: 33%;
   margin: 0 auto;
   float: right;
-  height: 10px;
   border-radius: 0px 0px 10px 0px;
-  padding-top: 8px;
-  align-self: auto;
+  align-self: center;
 }
 
-.bloc section {
+.bloc {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: row;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-          flex-direction: row;
+          flex-direction: column;
   word-break: normal;
-  width: 50%;
 }
 
 .entree, .plat, .dessert {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -1272,7 +1263,7 @@ section.light-m2 {
 }
 
 .gradient-m3 {
-  font-size: 3.3em;
+  font-size: 4em;
   padding: 40px 0;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -1285,16 +1276,31 @@ section.light-m2 {
   width: 100%;
 }
 
+.light-m3 {
+  padding: 40px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 30px;
+  width: 100%;
+}
+
 @supports (mix-blend-mode: lighten) {
-  section.light-m3 .gradient-m3 {
+  .gradient-m3 {
+    font-size: 4em;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
     color: #000;
     background: #fff;
     mix-blend-mode: multiply;
   }
-  section.light-m3 .gradient-m3::before {
+  .gradient-m3::before {
     content: "";
-    display: block;
     position: absolute;
     top: 0;
     right: 0;
@@ -1302,7 +1308,6 @@ section.light-m2 {
     left: 0;
     background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
     background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
-    pointer-events: none;
     mix-blend-mode: screen;
   }
 }
@@ -1391,34 +1396,36 @@ section.light-m2 {
 }
 
 .light-m4 {
-  font-size: 2.4em;
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100%;
 }
 
 @supports (mix-blend-mode: lighten) {
-  section.light-m4 .gradient-m4 {
-    display: inline-block;
+  .gradient-m4 {
+    font-size: 4em;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
     color: #000;
     background: #fff;
     mix-blend-mode: multiply;
   }
-  section.light-m4 .gradient-m4::before {
+  .gradient-m4::before {
     content: "";
-    display: block;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background: -webkit-gradient(linear, left top, right top, from(#00701a), color-stop(#43a047), color-stop(#43a047), color-stop(#76d275), to(#76d275));
-    background: linear-gradient(to right, #00701a, #43a047, #43a047, #76d275, #76d275);
-    pointer-events: none;
+    background: -webkit-gradient(linear, left top, right top, from(#2e7d32), color-stop(#81c784), color-stop(#98ee99), to(#98ee99));
+    background: linear-gradient(to right, #2e7d32, #81c784, #98ee99, #98ee99);
     mix-blend-mode: screen;
   }
 }
@@ -1500,7 +1507,6 @@ li {
     text-align: center;
   }
   li {
-    font-size: 1em;
     text-align: center;
   }
   .separateur {
